# CanViT-MLX

./: .gitignore  CLAUDE.md  LOG.md  README.md  README.md.in  canvit_mlx.py  convert.py  demo.py  generate_readme.py  justfile  main.py  push_to_hub.py  pyproject.toml  tach.toml  test_modules.py
bench/: plot.py  run.py  run_latency.py  run_memory.py  shared.py
bench/plot/: __init__.py  __main__.py  breakdown.py  ci.py  forward.py  memory.py  precision.py
canvit_mlx/: __init__.py  canvas_attention.py  canvit.py  checkpoint.py  classification.py  config.py  glimpse.py  grid.py  layer_scale.py  patch_embed.py  preprocess.py  rope.py  viewpoint.py  vit_block.py  vpe.py
canvit_mlx/coords/: __init__.py
canvit_mlx/model/: __init__.py
canvit_mlx/rope/: __init__.py
canvit_mlx/weights/: __init__.py
demos/: basic.py  realtime_pca.py  webcam.py
rl/: canvas_probes.py
tests/: conftest.py  test_convert.py  test_integration.py  test_model.py  test_rope.py  test_weights.py
tests/conversion/: test_conversion.py
tests/e2e/: __init__.py  mlx.py  plot.py  pt.py  test.py
tests/integration/: test_integration.py
tests/unit/classification/: test_classification.py
tests/unit/coords/: test.py
tests/unit/model/: test.py  test_model.py
tests/unit/rope/: test.py  test_rope.py
throwaway/: bench.py
typings/mlx/data/: __init__.pyi
