[project]
name = "canvit-mlx"
version = "0.1.0"
description = "CanViT inference on Apple Silicon via MLX"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Yohaï-Eliel Berreby", email = "me@yberreby.com" }]
dependencies = [
    "mlx>=0.30.6",
    "numpy>=2.2.0,<2.4.0",
    "safetensors>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.37.4",
    "canvit",
    "matplotlib>=3.10.8",
    "pypatree>=0.2.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "scikit-learn>=1.8.0",
    "tach>=0.33.2",
    "torch>=2.0",
    "tyro>=1.0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "test.py"]
addopts = "--cov=canvit_mlx --cov-report=term-missing"
log_cli = true
log_cli_level = "INFO"

[tool.basedpyright]
reportMissingModuleSource = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnannotatedClassAttribute = false
reportImplicitOverride = false
reportUnusedCallResult = false
reportAny = false

[tool.uv.sources]
canvit = { git = "ssh://git@github.com/yberreby/CanViT.git" }
