[project]
name = "canvit-mlx"
version = "0.1.0"
description = "CanViT inference on Apple Silicon via MLX"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Yohaï-Eliel Berreby", email = "me@yberreby.com" }]
dependencies = [
    "mlx>=0.30.6",
    "numpy>=2.2.0",
    "pillow>=11.0",
    "safetensors>=0.7.0",
]

[project.optional-dependencies]
hub = ["huggingface_hub>=0.30"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
demos = [
    "huggingface_hub>=0.30",
    "matplotlib>=3.10.8",
    "opencv-python>=4.11",
    "pillow>=11.0",
    "scikit-learn>=1.8.0",
    "tyro>=1.0.6",
]
dev = [
    "basedpyright>=1.37.4",
    "canvit-pytorch",
    "pypatree>=0.4.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "torch>=2.9.0",
    "torchvision>=0.22.0",
]
rl = [
    "matplotlib>=3.10.8",
    "mlflow>=3.9.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.15.0",
    "tqdm>=4.67.3",
    "tyro>=1.0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=canvit_mlx --cov-report=term-missing"
log_cli = true
log_cli_level = "INFO"

[tool.basedpyright]
reportMissingModuleSource = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnannotatedClassAttribute = false
reportImplicitOverride = false
reportUnusedCallResult = false
reportAny = false

[tool.uv.sources]
canvit-pytorch = { git = "ssh://git@github.com/yberreby/CanViT-PyTorch-Next.git" }
